--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "tailwind:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
   },
   "keywords": [],
